# ex_generation

./: AUTHORS  Makefile.am  Makefile.in  README.md  configure.ac
docs/: bal_split_hadamard.man  bal_split_od.man  bgw.man  circ.man  hadi_generalized_quadrangle.man  pseudogeometric.man  simplex.man
misc_const/: mat.out  seed.txt
misc_const/auto/: od.64.el
src/: bal_split_hadamard.in  bal_split_od.in  bgw.in  circ.in  funcs.sage  hadi_generalized_quadrangle.in  pseudogeometric.in  simplex.in
