bin_SCRIPTS = src/bgw src/circ src/simplex src/bal_split_hadamard \
src/bal_split_od src/hadi_generalized_quadrangle src/pseudogeometric
CLEANFILES = $(dist_bin_SCRIPTS)

dist_man1_MANS = docs/bgw.man docs/circ.man docs/simplex.man \
docs/bal_split_hadamard.man docs/bal_split_od.man \
docs/hadi_generalized_quadrangle.man docs/pseudogeometric.man

EXTRA_DIST = README.md
