AC_PREREQ([2.71])
AC_INIT([ex_generation], [0.0])

AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([src/bgw.in])

AM_INIT_AUTOMAKE

AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/bgw], [chmod +x src/bgw])
AC_CONFIG_FILES([src/circ], [chmod +x src/circ])
AC_CONFIG_FILES([src/simplex], [chmod +x src/simplex])
AC_CONFIG_FILES([src/bal_split_hadamard], [chmod +x src/bal_split_hadamard])
AC_CONFIG_FILES([src/bal_split_od], [chmod +x src/bal_split_od])
AC_CONFIG_FILES([src/hadi_generalized_quadrangle], [chmod +x src/hadi_generalized_quadrangle])
AC_CONFIG_FILES([src/pseudogeometric], [chmod +x src/pseudogeometric])

AC_OUTPUT
